# reef

./: .clang-format  .gitignore  AGENTS.md  BUILD.bazel  Cargo.toml  MODULE.bazel  commands.sh
coral/: BUILD.bazel  coral.cc  coral.rs
docs/: conventions.md
include/: BUILD.bazel  reef-allocator.h  reef-base.h  reef-macro.h  reef-module.h  reef-str.h  reef-token.h
modules/coral/: Cargo.toml
modules/reef/: Cargo.toml
src/: BUILD.bazel  allocator.cc  base.cc  module.cc  str.cc
